Change history
--------------

Release Candidate 1
===================

- ARDataBinder was ovewriting ids on belongs to relations causing
  NHibernate to throw exception. Fixed and added test cases

- Fixed binder problem (MR-161)

- Fixed Perfomance issue with Brail and sub views due to cache key normalization issues.

- Added logging to Brail, configured using the normal Castle's cofniguration mechansim

- Added support to passing parameters from the view to the layout, enabling a captureFor component in the view to be used in the layout

- Started refactoring ARScaffold to rely on FormHelper

- Small refactor on ARScaffold support to make it work with
  . ARDataBinder
  . The new Binder implementation

- Changed MonoRailContainer to save the configuration. On mono
  a copy is created everytime the config is requested, leading a big problems

- Fixed MR-155
  "Cast exception with configuration"

- Added two more events to ExtensionManager: Authorize and Authenticate.
  That allows authentication/authorization extensions to MonoRail that won't
  rely on filters

- Applied Jochen Grefe's patch fixing NVelocity-3
  "#include not working for nvelocity"

- Another attempt to MR-152 "Error while initializing MonoRail services"

  Separated container implementation from module. But it's important that 
  the module subscribe the events, so the container can delegate event invocations 
  to the extension manager

- Fixed MR-152 "Error while initializing MonoRail services"

- Applied midas's patch fixing MR-113
  "change collected view name in assembly to lower"

- Applied Don Morrison's patch fixing MR-150
  "Patch to fix problem with ARDataBinder and ARFetcher when dealing with joined subclasses."

- Added support for null property handling in Brail.
	${objMayBeNull.Name} -- will throw if null
	${ IgnoreNull(objMayBeNull).Name } -- will return empty string when null
	